--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="contact-info">
             <h2>Your Response</h2>
-            <p>Kirim aja respon lu ja siap menerima caci maki LMFAO (Kalo bisa jangan) 👍</p>
+            <p>Kirim aja respon lu ja tar masuk ke email gw 👍</p>
             <form action="https://formspree.io/f/mgvwrwpa" method="POST" id="contact-form">
                 <input type="text" id="fullname" name="fullname" placeholder="Full Name" required>
                 <input type="email" id="email" name="email" placeholder="Email" required>
@@ -24,7 +24,7 @@
             <div class="contact-details">
                 <p>Whatsapp Atau DM Boleh Pilih Aja</p>
                 <div class="contact-icons">
-                    <a href="https://wa.me/85710126571" target="_blank" title="WhatsApp">
+                    <a href="https://wa.me/6285710126571" target="_blank" title="WhatsApp">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                     <a href="https://www.instagram.com/b4ystwn" target="_blank" title="Instagram">
